# kirapilot-app

./: .gitignore  .prettierignore  .prettierrc  AI_LOGGING_GUIDE.md  BUILD_GUIDE.md  BUILD_INFO.md  LICENSE  PROJECT_STRUCTURE.md  README.md  TESTING.md  TEST_SOLUTION.md  add_sample_tasks.js  eslint.config.js  hero.ts  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  test_get_tasks_tool.rs  test_simplified_react.md  test_tool_registry.rs  tsconfig.json  vite.config.ts
docs/: .gitignore  AUTO_LOADING.md  BACKUP_RESTORE.md  DEPLOYMENT.md  DEVELOPMENT.md  FORMATTING_SETUP.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  TEST_SOLUTION.md  TRANSLATION_GUIDE.md  VERSION_MANAGEMENT.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
scripts/: apply-translations.js  auto-fix-translations.js  build-cross-platform.js  clean-duplicate-translations.js  fix-duplicate-keys.js  fix-duplicates-targeted.js  fix-translations.js  flatten-translations.js  generate-build-info.js  i18n-manager.js  setup-translations.sh  show-build-info.js  sync-version.js  translate-with-gemini.js  translation-helper.js  translation-manager.js  translation-utils.js  (+1 more)
src-tauri/: AI_MODEL_SWITCH_FIX.md  Cargo.toml  FINAL_TEST_STATUS.md  NEW_GEMMA_MODEL_SETUP.md  REACT_ENGINE_FIXES.md  REMOVED_RULE_BASED_TOOL_SELECTION.md  TASK_LISTING_FIX.md  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  llama_cpp_example.rs  main.rs
src-tauri/src/ai/: README.md  config.rs  error.rs  gemma_provider.rs  interaction_logger.rs  interaction_logger_test.rs  llm_judge.rs  llm_provider.rs  llm_provider_test.rs  mod.rs  provider_manager.rs  provider_switching_test.rs  react_engine.rs  react_engine_integration_test.rs  react_engine_test.rs  service_manager.rs  service_manager_test.rs  simple_tests.rs  tauri_commands_test.rs  tool_execution_logger.rs  tool_registry.rs  tool_registry_test.rs
src-tauri/src/ai/providers/: gemini_provider.rs  local_provider.rs  mod.rs
src-tauri/src/ai/tools/: get_tasks_tool.rs  mod.rs  task_tools.rs  timer_tools.rs  update_task_tool.rs
src-tauri/src/database/: README.md  config.rs  error.rs  integration_test.rs  mod.rs  tests.rs
src-tauri/src/database/entities/: README.md  ai_interactions.rs  ai_suggestions.rs  focus_sessions.rs  mod.rs  periodic_task_templates.rs  productivity_patterns.rs  task_dependencies.rs  task_lists.rs  tasks.rs  tests.rs  thread_messages.rs  threads.rs  time_sessions.rs  tool_execution_logs.rs  tool_usage_analytics.rs  user_preferences.rs
src-tauri/src/database/migration/: initialization.rs  integration_tests.rs  m20240101_000001_create_tasks_table.rs  m20240101_000002_create_task_dependencies_table.rs  m20240101_000003_create_time_sessions_table.rs  m20240101_000004_create_ai_interactions_table.rs  m20240101_000005_create_focus_sessions_table.rs  m20240101_000006_create_productivity_patterns_table.rs  m20240101_000007_create_user_preferences_table.rs  m20240101_000008_create_ai_suggestions_table.rs  m20240101_000009_create_indexes.rs  m20240101_000010_create_task_lists_table.rs  m20240101_000011_add_task_list_id_to_tasks.rs  m20240101_000012_fix_task_lists_unique_index.rs  m20240101_000013_add_order_num_to_tasks.rs  m20240101_000014_create_ai_logging_tables.rs  m20240101_000015_add_max_log_count.rs  m20240101_000016_create_threads_table.rs  m20240101_000017_create_periodic_task_templates_table.rs  m20240101_000018_add_periodic_columns_to_tasks.rs  m20240101_000019_create_periodic_task_indexes.rs  manual_test.rs  mod.rs  tests.rs
src-tauri/src/database/repositories/: ai_repository.rs  focus_repository.rs  mod.rs  pattern_repository.rs  periodic_task_repository.rs  task_list_repository.rs  task_repository.rs  thread_repository.rs  time_tracking_repository.rs
src-tauri/src/database/repositories/tests/: focus_repository_tests.rs  integration_test.rs  mod.rs  pattern_repository_tests.rs  task_list_repository_tests.rs  task_repository_tests.rs  time_tracking_repository_tests.rs
src-tauri/src/database/services/: mod.rs  task_generation_engine.rs  tests.rs
src-tauri/src/llama/: error.rs  integration_test.rs  mod.rs  model_manager.rs  resource_manager.rs  retry.rs  service.rs  tests.rs
src-tauri/tests/: README.md  local_ai_integration.rs  task_listing_behavior_test.rs  test_gemma_formatting.rs  test_kira_user_interactions.rs  test_local_model_integration.rs  test_react_engine.rs  test_react_get_tasks.rs  test_react_local_llm_integration.rs  test_react_with_llm_judge.rs  test_simplified_react_standalone.rs  test_today_task_filtering.rs
(+518 files in other folders)
