[package]
name = "kirapilot-app"
version = "0.0.43"
description = "Navigate your day with precision, powered by intelligent AI assistance!"
authors = ["Viet-Anh Nguyen (@vietanhdev)"]
edition = "2021"
default-run = "kirapilot-app"

# Cross-platform target configurations
[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies (if any)

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific dependencies (if any)

[target.'cfg(target_os = "linux")'.dependencies]
# Linux specific dependencies (if any)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kirapilot_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# SeaORM dependencies
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
# File handling and compression for backup/restore
zip = "2.1"
tauri-plugin-dialog = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
dirs = "5.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"

